// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<DatePicker /> should react on meta.plaintext correctly 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <DatePicker
    dateFormat={null}
    field={
      Object {
        "disabled": false,
        "id": "field0",
        "invalid": false,
        "name": "field0",
        "onBlur": [MockFunction],
        "onChange": [MockFunction],
        "value": "",
      }
    }
    label="field0"
    meta={
      Object {
        "error": undefined,
        "isValidating": undefined,
        "plaintext": true,
        "stringFormatter": [MockFunction],
        "valid": true,
      }
    }
    placeholder="ojs_select_placeholder"
    timeFormat={null}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": <Input
        disabled={false}
        id="field0"
        invalid={false}
        name="field0"
        onBlur={[MockFunction]}
        onChange={[MockFunction]}
        plaintext={true}
        type="text"
        value=""
      >
        Invalid date
      </Input>,
      "dateFormat": null,
      "field": Object {
        "disabled": false,
        "id": "field0",
        "invalid": false,
        "name": "field0",
        "onBlur": [MockFunction],
        "onChange": [MockFunction],
        "value": "",
      },
      "info": undefined,
      "label": "field0",
      "meta": Object {
        "error": undefined,
        "isValidating": undefined,
        "plaintext": true,
        "stringFormatter": [MockFunction],
        "valid": true,
      },
      "placeholder": "ojs_select_placeholder",
      "prefix": undefined,
      "suffix": undefined,
      "timeFormat": null,
      "validators": undefined,
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": "Invalid date",
        "disabled": false,
        "id": "field0",
        "invalid": false,
        "name": "field0",
        "onBlur": [MockFunction],
        "onChange": [MockFunction],
        "plaintext": true,
        "type": "text",
        "value": "",
      },
      "ref": null,
      "rendered": "Invalid date",
      "type": [Function],
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": <Input
          disabled={false}
          id="field0"
          invalid={false}
          name="field0"
          onBlur={[MockFunction]}
          onChange={[MockFunction]}
          plaintext={true}
          type="text"
          value=""
        >
          Invalid date
        </Input>,
        "dateFormat": null,
        "field": Object {
          "disabled": false,
          "id": "field0",
          "invalid": false,
          "name": "field0",
          "onBlur": [MockFunction],
          "onChange": [MockFunction],
          "value": "",
        },
        "info": undefined,
        "label": "field0",
        "meta": Object {
          "error": undefined,
          "isValidating": undefined,
          "plaintext": true,
          "stringFormatter": [MockFunction],
          "valid": true,
        },
        "placeholder": "ojs_select_placeholder",
        "prefix": undefined,
        "suffix": undefined,
        "timeFormat": null,
        "validators": undefined,
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": "Invalid date",
          "disabled": false,
          "id": "field0",
          "invalid": false,
          "name": "field0",
          "onBlur": [MockFunction],
          "onChange": [MockFunction],
          "plaintext": true,
          "type": "text",
          "value": "",
        },
        "ref": null,
        "rendered": "Invalid date",
        "type": [Function],
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getSnapshotBeforeUpdate": true,
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;

exports[`<DatePicker /> should render correctly 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <DatePicker
    dateFormat={null}
    field={
      Object {
        "disabled": false,
        "id": "field0",
        "invalid": false,
        "name": "field0",
        "onBlur": [MockFunction],
        "onChange": [MockFunction],
        "value": "",
      }
    }
    label="field0"
    meta={
      Object {
        "error": undefined,
        "isValidating": undefined,
        "plaintext": false,
        "stringFormatter": [MockFunction],
        "valid": true,
      }
    }
    placeholder="ojs_select_placeholder"
    timeFormat={null}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": <Unknown
        className=""
        closeOnSelect={true}
        closeOnTab={true}
        dateFormat={null}
        defaultValue=""
        id="field0"
        input={true}
        inputProps={
          Object {
            "disabled": false,
          }
        }
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onViewModeChange={[Function]}
        placeholder="ojs_select_placeholder"
        strictParsing={true}
        timeConstraints={Object {}}
        timeFormat={null}
        utc={false}
        value={null}
      />,
      "dateFormat": null,
      "field": Object {
        "disabled": false,
        "id": "field0",
        "invalid": false,
        "name": "field0",
        "onBlur": [MockFunction],
        "onChange": [MockFunction],
        "value": "",
      },
      "info": undefined,
      "label": "field0",
      "meta": Object {
        "error": undefined,
        "isValidating": undefined,
        "plaintext": false,
        "stringFormatter": [MockFunction],
        "valid": true,
      },
      "placeholder": "ojs_select_placeholder",
      "prefix": undefined,
      "suffix": undefined,
      "timeFormat": null,
      "validators": undefined,
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "className": "",
        "closeOnSelect": true,
        "closeOnTab": true,
        "dateFormat": null,
        "defaultValue": "",
        "id": "field0",
        "input": true,
        "inputProps": Object {
          "disabled": false,
        },
        "onBlur": [Function],
        "onChange": [Function],
        "onFocus": [Function],
        "onViewModeChange": [Function],
        "placeholder": "ojs_select_placeholder",
        "strictParsing": true,
        "timeConstraints": Object {},
        "timeFormat": null,
        "utc": false,
        "value": null,
      },
      "ref": null,
      "rendered": null,
      "type": [Function],
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": <Unknown
          className=""
          closeOnSelect={true}
          closeOnTab={true}
          dateFormat={null}
          defaultValue=""
          id="field0"
          input={true}
          inputProps={
            Object {
              "disabled": false,
            }
          }
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onViewModeChange={[Function]}
          placeholder="ojs_select_placeholder"
          strictParsing={true}
          timeConstraints={Object {}}
          timeFormat={null}
          utc={false}
          value={null}
        />,
        "dateFormat": null,
        "field": Object {
          "disabled": false,
          "id": "field0",
          "invalid": false,
          "name": "field0",
          "onBlur": [MockFunction],
          "onChange": [MockFunction],
          "value": "",
        },
        "info": undefined,
        "label": "field0",
        "meta": Object {
          "error": undefined,
          "isValidating": undefined,
          "plaintext": false,
          "stringFormatter": [MockFunction],
          "valid": true,
        },
        "placeholder": "ojs_select_placeholder",
        "prefix": undefined,
        "suffix": undefined,
        "timeFormat": null,
        "validators": undefined,
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "className": "",
          "closeOnSelect": true,
          "closeOnTab": true,
          "dateFormat": null,
          "defaultValue": "",
          "id": "field0",
          "input": true,
          "inputProps": Object {
            "disabled": false,
          },
          "onBlur": [Function],
          "onChange": [Function],
          "onFocus": [Function],
          "onViewModeChange": [Function],
          "placeholder": "ojs_select_placeholder",
          "strictParsing": true,
          "timeConstraints": Object {},
          "timeFormat": null,
          "utc": false,
          "value": null,
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getSnapshotBeforeUpdate": true,
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;
